string concatenation fix Signed-off-by: dbulahov <bulahovdenis@gmail.com>